# chess

./: CMakeLists.txt  QtChess.pro  README.md  buttons.cpp  buttons.h  game.cpp  game.h  game_gui.cpp  game_gui.h  location_piece_square.cpp  location_piece_square.h  main.cpp  move.cpp  move.h  promotion_button.cpp  promotion_button.h  qgame.cpp  qgame.h  qsquare.cpp  qsquare.h  square_gui.cpp  square_gui.h  state.cpp  state.h
